# AgentRag

./: .env.example  .gitignore  README.md  alembic.ini  cli.py  docker-compose.yml  main.py  pyproject.toml  scaler.py
data/benchmarks/: agent_baseline.json  retrieval_baseline.json
data/eval/: achievement-system.json  achievement-system_eval_report.json
data/test_docs/: MoneyPrinter.md  SYSTEM_DESIGN.md  achievement-system.md  test.md
docs/adr/: 0001-target-architecture-rollout.md  0002-structured-sql-reasoning.md
migrations/: env.py
migrations/versions/: 004f91c1e2cc_create_project_document_segment_synclog_.py  7cf4d493606a_create_documents_table_initial.py  820f6c6c0aad_initial.py  9f1c2d8a4b7e_add_graph_progress_columns.py  aa5dd4a77554_initial.py  b2e4f8a1c3d0_add_document_graph_status.py  c3f9f8b1d2e7_add_conversation_tables.py  f9e648f70f63_initial.py
scripts/: benchmark_agent.py  benchmark_graph.py  benchmark_ingest.py  benchmark_retrieval.py  chat.py
scripts/eval/: generate_dataset.py  run_eval.py
src/agentrag/: config.py  config_validation.py
src/agentrag/agent/: README.md  context.py  llm.py  service.py  tools.py
src/agentrag/agents/: data_agent.py  insight_agent.py  report_agent.py
src/agentrag/chat/: README.md  history.py  memory_jobs.py  structmem.py
src/agentrag/cli/: README.md  app.py  chat.py  conversations.py  state.py
src/agentrag/common/: README.md
src/agentrag/database/: __init__.py  models.py
src/agentrag/eval/: chunking_eval.py
src/agentrag/graph/: README.md  consolidation_jobs.py  graph_jobs.py  structmem_service.py  structmem_sync.py
src/agentrag/health/: providers.py
src/agentrag/ingestion/: README.md  pipeline.py
src/agentrag/mcp/: README.md  app.py  server.py
src/agentrag/retrieval/: README.md  elasticsearch_retriever.py  reranker.py
src/agentrag/services/: README.md  __init__.py  context_assembly_service.py  knowledge_service.py  llm_gateway.py  security_service.py
src/agentrag/structured/: README.md  __init__.py  extractor.py  pipeline.py  query_classifier.py  schema_discovery.py  sql_engine.py  synthesizer.py
src/agentrag/worker/: README.md  functions.py  pool.py  settings.py
src/pam/: config.py  config_validation.py
src/pam/agent/: README.md  context.py  llm.py  service.py  tools.py
src/pam/agents/: README.md  data_agent.py  insight_agent.py  report_agent.py
src/pam/chat/: README.md  history.py
src/pam/common/: security_policy.py  tracing.py
src/pam/database/: __init__.py  base.py  models.py
src/pam/eval/: answer_eval.py  dataset.py  retrieval_eval.py
src/pam/graph/: consolidation_jobs.py  entity_sync.py  graph_jobs.py  graphiti_service.py  hf_embedder.py  structmem_service.py  structmem_sync.py
src/pam/health/: providers.py
src/pam/ingestion/: README.md  pipeline.py
src/pam/mcp/: fastmcp_app.py  (+1 more)
(+36 files in other folders)
