[project]
name = "pam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",

    # Cache
    "redis>=5.0.0",
    "cachetools>=5.3.0",

    # Search
    "elasticsearch==8.15.0",
    "tiktoken>=0.7.0",

    # LLM / Embedding
    "openai>=1.30.0",
    "huggingface-hub>=0.23.0",
    "sentence-transformers>=3.0.0",

    # Ingestion / Parsing
    "markitdown[all]>=0.1.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",

    # HTTP client (gemini embedder, reranker)
    "aiohttp>=3.9.0",

    # Config
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
]
