[project]
name = "agentrag"
version = "0.1.0"
description = "AgentRag — RAG agent with MCP server and CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    # Cache / task queue
    "redis>=5.0.0",
    "arq>=0.26.0",
    "cachetools>=5.3.0",
    # Search
    "elasticsearch==8.15.0",
    "tiktoken>=0.7.0",
    # LLM / Embedding
    "openai>=1.30.0",
    "huggingface-hub>=0.23.0",
    "sentence-transformers>=3.0.0",
    # Ingestion / Parsing
    "markitdown[all]>=0.1.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    # HTTP client (gemini embedder, reranker)
    "aiohttp>=3.9.0",
    # Config
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    # MCP server
    "mcp>=1.3.0",
    # CLI
    "typer[all]>=0.12.0",
]

[project.scripts]
agentrag = "agentrag.cli.app:main"
